// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`++++ <TimeWeatherInfoTab /> ++++ Renders correctly with different props 1`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Temperture: "
      secondary="8.8℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempFeelsIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Feels temperture: "
      secondary="4.86℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <CloudsIcon
      height="25"
      svgClass="icon"
      viewBox="0 -87 463.83425 463"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Clouds: "
      secondary="53%"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <WindIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 512 512"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Wind: "
      secondary="3m/s 217deg"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`++++ <TimeWeatherInfoTab /> ++++ Renders correctly with different props 2`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Temperture: "
      secondary="7.24℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempFeelsIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Feels temperture: "
      secondary="2.49℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <CloudsIcon
      height="25"
      svgClass="icon"
      viewBox="0 -87 463.83425 463"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Clouds: "
      secondary="99%"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <WindIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 512 512"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Wind: "
      secondary="4.05m/s 224deg"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`++++ <TimeWeatherInfoTab /> ++++ Renders correctly with different props 3`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Temperture: "
      secondary="5.26℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempFeelsIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Feels temperture: "
      secondary="0.2℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <CloudsIcon
      height="25"
      svgClass="icon"
      viewBox="0 -87 463.83425 463"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Clouds: "
      secondary="97%"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <WindIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 512 512"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Wind: "
      secondary="4.32m/s 201deg"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;

exports[`++++ <TimeWeatherInfoTab /> ++++ Renders correctly with different props 4`] = `
<WithStyles(ForwardRef(List))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Temperture: "
      secondary="4.22℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <TempFeelsIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 64 64"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Feels temperture: "
      secondary="-1.76℃"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <CloudsIcon
      height="25"
      svgClass="icon"
      viewBox="0 -87 463.83425 463"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Clouds: "
      secondary="100%"
    />
  </WithStyles(ForwardRef(ListItem))>
  <WithStyles(ForwardRef(ListItem))
    alignItems="center"
  >
    <WindIcon
      height="25"
      svgClass="icon"
      viewBox="0 0 512 512"
      width="25"
    />
    <WithStyles(ForwardRef(ListItemText))
      primary="Wind: "
      secondary="5.48m/s 212deg"
    />
  </WithStyles(ForwardRef(ListItem))>
</WithStyles(ForwardRef(List))>
`;
